<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="5dp"
    tools:context="name.xunicorn.iocipherbrowserext.fragments.dialogs.NewTicketDialog" >

    <EditText
        android:id="@+id/newTicketTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/txtCreateTicketTitle"/>

    <EditText
        android:id="@+id/newTicketUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/txtCreateTicketUsername"
        />

    <EditText
        android:inputType="textMultiLine"
        android:id="@+id/newTicketMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:lines="5"
        android:scrollbars="vertical"
        android:hint="@string/txtCreateTicketMessage"
        />

    <CheckBox
        android:id="@+id/newTicketAppLogs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtCreateTicketAppLogs"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        >
        <Button
            android:id="@+id/btnCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnCancel"
            android:layout_gravity="center"
            />
        <Button
            android:id="@+id/btnCreate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnCreate"
            android:layout_gravity="center"
            />
    </LinearLayout>
</LinearLayout>

