<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:padding="10dp"
    >

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">

        <RadioButton
            android:id="@+id/radioBtnPathInternal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pathInternal"
            android:checked="true"
            />
        <RadioButton
            android:id="@+id/radioBtnPathExternal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pathExternal"
            android:checked="true"
            />

        <RadioButton
            android:id="@+id/radioBtnPathCustom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pathCustom"
            />

    </RadioGroup>
    <LinearLayout
        android:id="@+id/customContainerGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone"
        >
        <TextView
            android:id="@+id/hintCustomPath"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            />
        <EditText
            android:id="@+id/editCustomPath"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/savedContainersGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone"
        >
        <TextView
            android:text="@string/savedContainers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            />
        <ListView
            android:id="@+id/lvSavedContainers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/actionButtonsGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        >
        <Button
            android:id="@+id/btnCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnCancel"
            />
        <Button
            android:id="@+id/btnOk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnOk"
            />
    </LinearLayout>
</LinearLayout>