<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context="name.xunicorn.iocipherbrowserext.fragments.DefaultFragment">

    <LinearLayout
        android:id="@+id/layoutPlugContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/hintPlugContainer"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            >
            <Button
                android:id="@+id/btnCreate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btnCreate"
                />
            <Button
                android:id="@+id/btnPlug"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/btnPlug"
                />
        </LinearLayout>

    </LinearLayout>
</FrameLayout>
