<LinearLayout
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="name.xunicorn.iocipherbrowserext.activities.UpdateActivity"  >



        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:elevation="4dp"
            android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
            android:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            />

        <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp">

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

                <TextView
                    android:text="@string/txtCurrentVersion"
                    android:layout_column="1"
                    android:textSize="15dp"/>

                <TextView
                    android:id="@+id/tvCurrentVersion"
                    android:layout_column="2"
                    android:textSize="15dp"
                    android:layout_marginLeft="5dp"/>

            </TableRow>
            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

                <TextView
                    android:text="@string/txtLatestVersion"
                    android:layout_column="1"
                    android:textSize="15dp"/>


                <TextView
                    android:id="@+id/tvLatestVersion"
                    android:text="@string/txtLatestVersionUnknown"
                    android:layout_column="2"
                    android:textStyle="bold"
                    android:textSize="15dp"
                    android:layout_marginLeft="5dp"
                    />
            </TableRow>
        </TableLayout>

        <TextView
            android:id="@+id/tvUpdateHint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/txtUpdatingHint"
            android:textSize="20dp"
            android:padding="5dp"
            android:textAlignment="center"
            />

        <Button
            android:id="@+id/btnUpdate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnUpdate"
            android:layout_gravity="center_horizontal"
            android:visibility="gone"
            android:background="@drawable/red_button"
            android:textColor="#fff"
            />

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/progressBar"
            android:layout_gravity="center_horizontal"/>

    <ProgressBar
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/progressBarDownload"
        android:layout_gravity="center_horizontal"
        android:padding="5dp"
        android:visibility="gone"/>


</LinearLayout>

